<resources>
    <string name="aToz">abcdefghijklmnopqrstuvwxyz</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_copy_successfully">Account Replicated Successfully</string>
    <string name="aircraft_log_content_feedback">Feedback:</string>
    <string name="aircraft_log_hint_feedback">Please describe the current problems (it helps us to solve the problems easier).</string>
    <string name="aircraft_log_hint_model">Please fill in the current aircraft model</string>
    <string name="aircraft_log_info">Information filling</string>
    <string name="aircraft_log_model">Aircraft model:</string>
    <string name="android_allow_system_album_to_your_photos_for_saving_and_browsing_tips">It\'s recommended to allow PotensicPro to access the Storage Permission for your Photos and Videos to save and browse files.</string>
    <string name="android_allow_system_album_to_your_photos_for_saving_and_browsing_title">PotensicPro Requests Access to your Photos and Videos</string>
    <string name="android_enter_flight_interface_access_external_storage_tips">Allow PotensicPro to access your External Storage to save photos, videos and flight records during flight.</string>
    <string name="android_enter_flight_interface_access_location_and_photos_tips">Allow PotensicPro to access your Storage and Location to obtain location information, save photos, videos and flight records during flight.</string>
    <string name="android_enter_flight_interface_access_location_tips">Allow PotensicPro to access your Location to obtain location information, display the current location of you and the drone on the map during flight.</string>
    <string name="android_manual_download_tips">Allow PotensicPro to access your Storage and Files as current operation requires access to save and read files in storage.</string>
    <string name="android_manual_share_tips">Allow PotensicPro to access your Storage and Files as current operation requires access to share files in storage.</string>
    <string name="android_sdk_version_7">Android 7.0 or later</string>
    <string name="app_name">SecurityKeyboard</string>
    <string name="app_name_potensicpro">PotensicPro</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="atom_firmware_upgrade_precautionary_tips">1. Do not disconnect or operate the drone and remote controller unless prompted. \n2. Ensure that your phone remains unlocked and stays on the upgrade interface in PotensicPro App; avoid making or answering calls during this process. \n3. Prior to upgrade, ensure the gimbal protector has been removed and there are no obstacles obstructing the gimbal\'s movement.</string>
    <string name="atom_lt_circling_flight_setting_circling_radius_title">Circling Radius</string>
    <string name="atom_lt_circling_flight_setting_start_flying_button">Start flying</string>
    <string name="atom_lt_frequency_pairing_mode_tips1">Long press the power button to start the drone.</string>
    <string name="atom_lt_frequency_pairing_mode_tips2">Double press the power button to enter the frequency pairing mode.</string>
    <string name="atom_lt_frequency_pairing_mode_title">Frequency Pairing Mode</string>
    <string name="atom_lt_guide_settings_control_tips">Set up the remote controller</string>
    <string name="atom_lt_intelligent_flight_can_only_be_activated_mid_filght_tips">Intelligent Flight can only be activated mid-flight.</string>
    <string name="atom_lt_intelligent_flight_is_unavailable_in_non_gps_mode_tips">In non-GPS mode, Intelligent Flight is inaccessible.</string>
    <string name="atti_gps_oppti">GPS/OPTI inaccessible!</string>
    <string name="atti_mode_locked">Attitude mode locked</string>
    <string name="atti_mode_turn_off">Attitude mode off</string>
    <string name="atti_mode_turn_on">Attitude mode on</string>
    <string name="attitude_angle_too_large">The attitude angle is too large!</string>
    <string name="bad">Bad</string>
    <string name="battery">Battery</string>
    <string name="battery_capacity_abnormal_go_home">Abnormal battery capacity, RTH initiated</string>
    <string name="battery_capacity_abnormal_takeoff">Abnormal battery level, unable to take off</string>
    <string name="battery_fail_1_pice">The battery pressure difference is too large, triggering return home</string>
    <string name="battery_fail_2_pice">Abnormal battery, emergency landing</string>
    <string name="battery_fail_in_land">The battery cell is abnormal and cannot take off, please contact after-sales service</string>
    <string name="battery_fail_jump">The battery jumps abnormally, which triggers the smart return home, please restart the drone</string>
    <string name="battery_temperature_need_higher">Safe flight requires a core temperature≥%d℃</string>
    <string name="battery_temperature_need_lower">The battery temperature is too high to take off!</string>
    <string name="bigpackage_upgrade_fw_transfer_interference_detected_tips">Oops! Interference detected, please change your location and restart your devices, then try upgrading again.</string>
    <string name="bottom_main_editor">Photo Album</string>
    <string name="bottom_main_equipment">Equipment</string>
    <string name="bottom_main_me">Me</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="btn_close_beep">Stop beeping</string>
    <string name="btn_start_beep">Start beeping</string>
    <string name="button_allow">Allow</string>
    <string name="button_refuse">Don\'t Allow</string>
    <string name="calibration_failed">Calibration failed</string>
    <string name="calibration_failed_tips_remote_controller_signal_weak">Remote controller signal weak, keep away from the interference and re-calibrate, and make sure the remote controller is within 3m/9.84ft of the drone when calibrating.</string>
    <string name="calibration_successful">Calibration succeeded</string>
    <string name="calibration_successful_wait_reboot">Calibration succeeded, please wait for the gimbal to restart!</string>
    <string name="camera">Camera</string>
    <string name="camera_ev">EM</string>
    <string name="camera_format">Format</string>
    <string name="camera_grid">Grid</string>
    <string name="camera_permission">Before taking photos/videos, please allow access to camera permissions to ensure normal use.</string>
    <string name="camera_photo_quality">Photo Quality</string>
    <string name="camera_resolution_ratio">Resolution</string>
    <string name="camera_sd_format">Format SD card</string>
    <string name="camera_video_segmentation">Video Segmentation</string>
    <string name="camera_watermark">Enable Telemetry Data</string>
    <string name="can_not_use_potensicpro">You have not yet agreed to PotensicPro\'s use agreement and privacy policy, and PotensicPro cannot be used.</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_country">Select Country</string>
    <string name="choose_device">Select Device Model</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="compass_calibration_tips">While performing geomagnetic calibration, place the drone at least 1.5m (4.92 ft) above the ground before proceeding.</string>
    <string name="compass_level_calibrate">Horizontal Calibration</string>
    <string name="compass_start_calibration">Start Calibration</string>
    <string name="compass_vertical_calibration">Vertical Calibration</string>
    <string name="connect_enter_device">Enter Device</string>
    <string name="connect_enter_flight">Enter the flight interface</string>
    <string name="connect_method">Connection methods</string>
    <string name="connect_select">Next</string>
    <string name="flight_data_change_tips">After adjusting the settings, click the“X”button in the upper right corner to save the settings!</string>
    <string name="flight_no_setting_tips">To ensure safety, please change the settings after returning.</string>
    <string name="guide_setting_basic">Basic setup of drone</string>
    <string name="guide_setting_calibration">Drone calibration settings</string>
    <string name="guide_setting_flight_parameters">Set the basic flight parameters of drone</string>
    <string name="guide_setting_mode">Select the drone joystick control mode</string>
    <string name="guide_setting_smart_battery">View the drone battery information</string>
    <string name="left_intelligent_flight">Intelligent Flight</string>
    <string name="left_intelligent_mode">Intelligent Mode</string>
    <string name="left_others">Others</string>
    <string name="plane_follow_up">Follow Me</string>
    <string name="plane_hot_circle">Circle Flight</string>
    <string name="plane_waypoint_flight">Waypoint Flight</string>
    <string name="remote_backward">Backward</string>
    <string name="remote_down">Down</string>
    <string name="remote_forward">Forward</string>
    <string name="remote_left_side">Left \nside flight</string>
    <string name="remote_left_stick">Left Stick</string>
    <string name="remote_right_side">Right \nside flight</string>
    <string name="remote_right_stick">Right Stick</string>
    <string name="remote_turn_left">Turn Left</string>
    <string name="remote_turn_right">Turn Right</string>
    <string name="remote_up">Up</string>
    <string name="sys_remote_american_hand">Model 1</string>
    <string name="sys_remote_japan_hand">Model 2</string>
    <string name="sys_remote_set">Remote Controller Settings</string>
    <string name="tab_directional">Headless Mode/Head Mode</string>
    <string name="tab_gps_mode">GPS/Attitude Mode</string>
    <string name="tab_lock_mode">Unlock Mode/Lock Mode</string>
    <string name="tab_remote_control_off">Virtual Controller Off</string>
</resources>