<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/layout_guide"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/dp_5"
    android:layout_marginEnd="@dimen/dp_3">
    <TextView
        android:textSize="@dimen/sp_10"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/guide_setting_flight_parameters"
        android:layout_weight="1"/>
    <TextView
        android:textSize="@dimen/sp_10"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/guide_setting_calibration"
        android:layout_weight="1"/>
    <TextView
        android:textSize="@dimen/sp_10"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/guide_setting_mode"
        android:layout_weight="1"/>
    <TextView
        android:textSize="@dimen/sp_10"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/guide_setting_smart_battery"
        android:layout_weight="1"/>
    <TextView
        android:textSize="@dimen/sp_10"
        android:textColor="@color/colorWhite"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/guide_setting_basic"
        android:layout_weight="1"/>
</LinearLayout>
