<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_intelligent_mode_bg"
    android:scrollbars="none"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textSize="@dimen/sp_14"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/tv_mode"
            android:background="@color/color_intelligent_mode_item"
            android:padding="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/left_intelligent_mode"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_cb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mode">
            <CheckBox
                android:id="@+id/cb_directional"
                android:text="@string/tab_directional"
                android:drawableTop="@mipmap/icon_head_mode"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/cb_lock"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/tab_check_button_bar"/>
            <CheckBox
                android:id="@+id/cb_lock"
                android:text="@string/tab_lock_mode"
                android:drawableTop="@mipmap/icon_lock"
                app:layout_constraintLeft_toRightOf="@+id/cb_directional"
                app:layout_constraintRight_toLeftOf="@+id/cb_gps"
                app:layout_constraintTop_toTopOf="@+id/cb_directional"
                style="@style/tab_check_button_bar"/>
            <CheckBox
                android:id="@+id/cb_gps"
                android:text="@string/tab_gps_mode"
                android:drawableTop="@mipmap/icon_atti_turnoff"
                app:layout_constraintLeft_toRightOf="@+id/cb_lock"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cb_directional"
                style="@style/tab_check_button_bar"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:textSize="@dimen/sp_14"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/tv_flight"
            android:background="@color/color_intelligent_mode_item"
            android:padding="@dimen/dp_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/left_intelligent_flight"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_cb"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ll_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_flight">
            <TextView
                android:id="@+id/tv_hot_circle"
                android:text="@string/plane_hot_circle"
                android:drawableTop="@mipmap/icon_hot_circle"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tv_waypoint_flight"
                app:layout_constraintTop_toTopOf="parent"
                style="@style/tab_check_button_bar"/>
            <TextView
                android:id="@+id/tv_waypoint_flight"
                android:text="@string/plane_waypoint_flight"
                android:drawableTop="@mipmap/icon_waypoint_flight"
                app:layout_constraintLeft_toRightOf="@+id/tv_hot_circle"
                app:layout_constraintRight_toLeftOf="@+id/tv_follow_me"
                app:layout_constraintTop_toTopOf="@+id/tv_hot_circle"
                style="@style/tab_check_button_bar"/>
            <TextView
                android:id="@+id/tv_follow_me"
                android:text="@string/plane_follow_up"
                android:drawableTop="@mipmap/icon_follow_me"
                app:layout_constraintLeft_toRightOf="@+id/tv_waypoint_flight"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_hot_circle"
                style="@style/tab_check_button_bar"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:textSize="@dimen/sp_14"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/tv_others"
            android:background="@color/color_intelligent_mode_item"
            android:padding="@dimen/dp_10"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/left_others"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ll_mode"/>
        <LinearLayout
            android:orientation="horizontal"
            android:id="@+id/ll_remote"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_others">
            <CheckBox
                android:id="@+id/cb_remote"
                android:paddingBottom="@dimen/dp_15"
                android:text="@string/tab_remote_control_off"
                android:drawableTop="@mipmap/icon_remote_control_mode"
                style="@style/tab_check_button_bar"/>
            <CheckBox
                android:paddingBottom="@dimen/dp_15"
                android:visibility="invisible"
                android:text="@string/tab_remote_control_off"
                android:drawableTop="@mipmap/icon_remote_control_mode"
                style="@style/tab_check_button_bar"/>
            <CheckBox
                android:paddingBottom="@dimen/dp_15"
                android:visibility="invisible"
                android:text="@string/tab_remote_control_off"
                android:drawableTop="@mipmap/icon_remote_control_mode"
                style="@style/tab_check_button_bar"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
