<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorOpaque"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="@dimen/sp_14"
        android:textColor="@color/colorWhite"
        android:id="@+id/tv_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_20"
        android:text="@string/sys_remote_set"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:textSize="@dimen/sp_10"
        android:textColor="@color/colorRemainedBattery"
        android:id="@+id/tv_flight_tips"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/flight_no_setting_tips"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_setting"/>
    <LinearLayout
        android:gravity="center"
        android:id="@+id/ll_data_change"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.8">
        <TextView
            android:textSize="@dimen/sp_13"
            android:textColor="@color/colorWhite"
            android:gravity="center"
            android:id="@+id/tv_data_change"
            android:background="@drawable/bg_setting_data_change"
            android:padding="@dimen/dp_12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/flight_data_change_tips"/>
    </LinearLayout>
    <ImageView
        android:id="@+id/iv_back"
        android:padding="@dimen/dp_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/icon_bg_setting_back"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <ScrollView
        android:paddingBottom="@dimen/dp_10"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_0"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_flight_tips">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:textSize="@dimen/dp_14"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:id="@+id/tv_mode_1"
                android:background="@drawable/bg_setting_button_select_left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sys_remote_american_hand"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/tv_mode_2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.46"/>
            <TextView
                android:textSize="@dimen/dp_14"
                android:textColor="@color/colorWhite"
                android:gravity="center"
                android:id="@+id/tv_mode_2"
                android:background="@drawable/bg_setting_model_default_right"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/sys_remote_japan_hand"
                app:layout_constraintLeft_toRightOf="@+id/tv_mode_1"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent="0.46"/>
            <View
                android:background="@drawable/bg_remote_controller_setting"
                android:paddingBottom="@dimen/dp_20"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_left_stick"
                app:layout_constraintLeft_toLeftOf="@+id/tv_mode_1"
                app:layout_constraintRight_toRightOf="@+id/tv_mode_2"
                app:layout_constraintTop_toTopOf="@+id/tv_mode_1"/>
            <ImageView
                android:id="@+id/iv_left"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dp_25"
                android:src="@mipmap/icon_virtual_rocker_model1_left"
                android:scaleType="fitXY"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintLeft_toLeftOf="@+id/tv_mode_1"
                app:layout_constraintRight_toRightOf="@+id/tv_mode_1"
                app:layout_constraintTop_toBottomOf="@+id/tv_mode_1"
                app:layout_constraintWidth_percent="0.24"/>
            <TextView
                android:textSize="@dimen/sp_9"
                android:textColor="@color/colorWhite"
                android:id="@+id/tv_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remote_up"
                app:layout_constraintBottom_toTopOf="@+id/iv_left"
                app:layout_constraintLeft_toLeftOf="@+id/iv_left"
                app:layout_constraintRight_toRightOf="@+id/iv_left"/>
            <TextView
                android:textSize="@dimen/sp_9"
                android:textColor="@color/colorWhite"
                android:id="@+id/tv_down"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remote_down"
                app:layout_constraintLeft_toLeftOf="@+id/iv_left"
                app:layout_constraintRight_toRightOf="@+id/iv_left"
                app:layout_constraintTop_toBottomOf="@+id/iv_left"/>
            <TextView
                android:textSize="@dimen/sp_9"
                android:textColor="@color/colorWhite"
                android:gravity="left"
                android:id="@+id/tv_left"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/remote_turn_left"
                app:layout_constraintBottom_toBottomOf="@+id/iv_left"
                app:layout_constraintRight_toLeftOf="@+id/iv_left"
                app:layout_constraintTop_toTopOf="@+id/iv_left"
                app:layout_constraintWidth_percent="0.1"/>
            <TextView
                android:textSize="@dimen/sp_9"
                android:textColor="@color/colorWhite"
                android:gravity="left"
                android:id="@+id/tv_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remote_turn_right"
                app:layout_constraintBottom_toBottomOf="@+id/iv_left"
                app:layout_constraintLeft_toRightOf="@+id/iv_left"
                app:layout_constraintTop_toTopOf="@+id/iv_left"/>
            <TextView
                android:textSize="@dimen/sp_12"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:id="@+id/tv_left_stick"
                android:paddingBottom="@dimen/dp_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:text="@string/remote_left_stick"
                app:layout_constraintLeft_toLeftOf="@+id/iv_left"
                app:layout_constraintRight_toRightOf="@+id/iv_left"
                app:layout_constraintTop_toBottomOf="@+id/tv_down"/>
            <ImageView
                android:id="@+id/iv_right"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dp_25"
                android:src="@mipmap/icon_virtual_rocker_model1_right"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintLeft_toLeftOf="@+id/tv_mode_2"
                app:layout_constraintRight_toRightOf="@+id/tv_mode_2"
                app:layout_constraintTop_toBottomOf="@+id/tv_mode_2"
                app:layout_constraintWidth_percent="0.24"/>
            <TextView
                android:textSize="@dimen/dp_12"
                android:textStyle="bold"
                android:textColor="@color/colorWhite"
                android:id="@+id/tv_remote_right_stick"
                android:paddingBottom="@dimen/dp_15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                android:text="@string/remote_right_stick"
                app:layout_constraintLeft_toLeftOf="@+id/iv_right"
                app:layout_constraintRight_toRightOf="@+id/iv_right"
                app:layout_constraintTop_toBottomOf="@+id/tv_backward"/>
            <TextView
                android:textSize="@dimen/sp_9"
                android:textColor="@color/colorWhite"
                android:gravity="left"
                android:id="@+id/tv_right_side"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remote_right_side"
                app:layout_constraintBottom_toBottomOf="@+id/iv_right"
                app:layout_constraintLeft_toRightOf="@+id/iv_right"
                app:layout_constraintTop_toTopOf="@+id/iv_right"/>
            <TextView
                android:textSize="@dimen/sp_9"
                android:textColor="@color/colorWhite"
                android:gravity="right"
                android:id="@+id/tv_left_side"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remote_left_side"
                app:layout_constraintBottom_toBottomOf="@+id/iv_right"
                app:layout_constraintRight_toLeftOf="@+id/iv_right"
                app:layout_constraintTop_toTopOf="@+id/iv_right"/>
            <TextView
                android:textSize="@dimen/sp_9"
                android:textColor="@color/colorWhite"
                android:id="@+id/tv_forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remote_forward"
                app:layout_constraintBottom_toTopOf="@+id/iv_right"
                app:layout_constraintLeft_toLeftOf="@+id/iv_right"
                app:layout_constraintRight_toRightOf="@+id/iv_right"/>
            <TextView
                android:textSize="@dimen/sp_9"
                android:textColor="@color/colorWhite"
                android:id="@+id/tv_backward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/remote_backward"
                app:layout_constraintLeft_toLeftOf="@+id/iv_right"
                app:layout_constraintRight_toRightOf="@+id/iv_right"
                app:layout_constraintTop_toBottomOf="@+id/iv_right"/>
            <include
                android:paddingBottom="@dimen/dp_10"
                android:visibility="visible"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_remote_right_stick"
                layout="@layout/view_layout_setting3_item1"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
